# wcargs_history

./: README.md  pyproject.toml
src/wcargs_history/: cli.py
src/wcargs_history/db/: utils.py
tests/: test_cli.py  test_db.py
