[project]
name = "wcargs_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "whitecapella1", email = "whitecapella@naver.com"},
]
dependencies = []
requires-python = ">=3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
pytest = []
